# Webtoon-Downloader

./: .editorconfig  .env.example  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .typos.toml  .yamllint  404.html  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  Start.bat  codecov.yaml  contributions.MD  docker-compose.yml  flake.nix  index.html  mkdocs.yml  objects.inv  package.nix  pyproject.toml  requirements.txt  run.py  setup.py  sitemap.xml  tox.ini
.devcontainer/: devcontainer.json  postCreateCommand.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  general_question.md
.github/actions/setup-poetry-env/: action.yml
.github/actions/setup-uv-env/: action.yml
.github/workflows/: deploy-pages.yml  lint.yaml  main.yml  on-release-main.yml  validate-codecov-config.yml
WebtoonDownloader/: WebtoonDownloader.py  __init__.py  logger.py  utils.py
WebtoonDownloader/classes/: DownloadSettings.py  Series.py  WebtoonSession.py
WebtoonDownloader/classes/progress/: DownloadProgress.py
WebtoonDownloader/classes/tasks/: chapter_download_task.py  image_download_task.py
WebtoonDownloader/classes/threads/: ThreadPoolExecutorWithQueueSizeLimit.py
docs/: architecture.md  cli.md  development.md  faq.md  getting-started.md  index.md  modules.md
modules/: index.html
search/: search_index.json
src/: options.py  requirements.txt  webtoon_downloader.py  webtoon_session.py
tests/: test_cli.py  test_cli_options.py  test_comicinfo.py  test_downloader.py  test_exporter.py  test_extractors.py  test_fetchers.py  test_foo.py  test_storage.py  test_transformers.py
webtoon_downloader/: logger.py
webtoon_downloader/cmd/: cli.py  exceptions.py  options.py  progress.py
webtoon_downloader/core/: __init__.py  client.py  downloader.py  exceptions.py  extractor.py  file.py  models.py  utils.py
webtoon_downloader/core/downloaders/: image.py
webtoon_downloader/core/webtoon/: __init__.py  _downloader.py  api.py  client.py  comicinfo.py  downloader.py  exporter.py  extractor.py  fetchers.py  models.py  namer.py
webtoon_downloader/core/webtoon/downloaders/: callbacks.py  chapter.py  comic.py  options.py  result.py
webtoon_downloader/storage/: __init__.py  exceptions.py  file.py  pdf.py  zip.py
webtoon_downloader/transformers/: base.py  image.py
