[tool.poetry]
name = "webtoon_downloader"
version = "1.0.1"
description = "A fast scrapper ⚡ for downloading comics from the Webtoons platform."
authors = ["Ali Taibi <zehinadev@gmail.com>"]
repository = "https://github.com/Zehina/webtoon-downloader"
documentation = "https://Zehina.github.io/webtoon-downloader/"
readme = "README.md"
packages = [
  {include = "webtoon_downloader"}
]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.4"
pillow = "^10.1.0"
rich = "^13.7.0"
furl = "^2.1.3"
httpx = {version = "^0.26.0", extras = ["http2"]}
aiofiles = "^23.2.1"
pymupdf = "^1.23.8"
typing-extensions = "^4.9.0"
rich-click = "^1.7.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
deptry = "^0.12.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"
pytest-asyncio = "^0.23.2"
types-beautifulsoup4 = "^4.12.0.7"
types-pillow = "^10.1.0.2"
types-requests = "^2.31.0.10"
types-aiofiles = "^23.2.0.0"
ruff = "^0.1.9"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
files = ["webtoon_downloader"]
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
python_version = "3.8"

[[tool.mypy.overrides]]
module = ["furl", "fitz"]
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.ruff]
target-version = "py38"
line-length = 120
fix = true
allowed-confusables = ["–"]
select = [
    # flake8-2020
    "YTT",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # flake8-builtins
    "A",
    # flake8-comprehensions
    "C4",
    # flake8-debugger
    "T10",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # mccabe
    "C90",
    # pycodestyle
    "E", "W",
    # pyflakes
    "F",
    # pygrep-hooks
    "PGH",
    # pyupgrade
    "UP",
    # ruff
    "RUF",
    # tryceratops
    "TRY",
]
ignore = [
    "E501",   # line-too-long
    "E731",   # lambda-assignment
    "S311",   # suspicious-non-cryptographic-random-usage
    "TRY300", # try-consider-else
]

[tool.ruff.format]
preview = true

[tool.pylint."MESSAGES CONTROL"]
disable = "all"
enable = "W,E,F"

[tool.deptry.per_rule_ignores]
DEP002 = ["lxml"] # lxml is used by BeautifulSoup

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["webtoon_downloader"]

[tool.poetry.scripts]
webtoon-downloader = 'webtoon_downloader.cmd.cli:run'

[tool.project.urls]
Homepage = 'https://github.com/Zehina/Webtoon-Downloader'
Issues = 'https://github.com/Zehina/Webtoon-Downloader/issues'
Repository = 'https://github.com/Zehina/Webtoon-Downloader.git'

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]
