[project]
name = "webtoon_downloader"
version = "2.3.0"
description = "A fast scrapper ⚡ for downloading comics from the Webtoons platform."
authors = [{ name = "Ali Taibi", email = "zehinadev@gmail.com" }]
requires-python = ">=3.10,<4.0"
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "beautifulsoup4>=4.12.2,<5",
    "lxml>=6.0.2,<7",
    "pillow>=12.0.0,<13",
    "rich>=13.7.0,<14",
    "furl>=2.1.3,<3",
    "httpx[http2]>=0.28.1,<0.29",
    "aiofiles>=25.1.0,<26",
    "pymupdf>=1.27.1,<2",
    "typing-extensions>=4.9.0,<5",
    "rich-click>=1.7.2,<2",
    "dacite>=1.9.2,<2",
    "httpx-retries>=0.4.0,<0.5",
]

[project.urls]
Repository = "https://github.com/Zehina/webtoon-downloader"
Documentation = "https://Zehina.github.io/webtoon-downloader/"

[project.scripts]
webtoon-downloader = "webtoon_downloader.cmd.cli:run"

[dependency-groups]
dev = [
    "pytest>=7.2.0,<8",
    "pytest-cov>=4.0.0,<5",
    "deptry>=0.12.0,<0.13",
    "mypy>=1.5.1,<2",
    "pre-commit>=3.4.0,<4",
    "tox>=4.11.1,<5",
    "tox-uv>=1.33.0,<2",
    "pytest-asyncio>=0.23.2,<0.24",
    "types-beautifulsoup4>=4.12.0.7,<5",
    "types-pillow>=10.1.0.2,<11",
    "types-requests>=2.31.0.10,<3",
    "types-aiofiles>=23.2.0.0,<24",
    "ruff>=0.11.0,<0.12",
]
docs = [
    "mkdocs>=1.6.1,<2",
    "mkdocs-material>=9.2.7,<10",
    "mkdocstrings>=0.29.0,<0.30",
    "mkdocs-autorefs>=1.4.1,<2",
    "mkdocstrings-python>=1.16.5,<2",
    "griffe>=1.6.0,<2",
    "pyyaml>=6.0.3,<7",
    "markupsafe>=3.0.3,<4",
]

[tool.uv]
default-groups = "all"

[tool.uv.build-backend]
module-name = ["webtoon_downloader"]
module-root = ""

[build-system]
requires = ["uv_build>=0.8.22,<0.9.0"]
build-backend = "uv_build"

[tool.mypy]
files = ["webtoon_downloader"]
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
python_version = "3.10"

[[tool.mypy.overrides]]
module = ["furl", "fitz"]
ignore_missing_imports = true


[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["network: requires internet access"]
addopts = "-m 'not network'"


[tool.ruff]
target-version = "py38"
line-length = 120
fix = true
lint.allowed-confusables = ["–"]
lint.select = [
  # flake8-2020
  "YTT",
  # flake8-bandit
  "S",
  # flake8-bugbear
  "B",
  # flake8-builtins
  "A",
  # flake8-comprehensions
  "C4",
  # flake8-debugger
  "T10",
  # flake8-simplify
  "SIM",
  # isort
  "I",
  # mccabe
  "C90",
  # pycodestyle
  "E",
  "W",
  # pyflakes
  "F",
  # pygrep-hooks
  "PGH",
  # pyupgrade
  "UP",
  # ruff
  "RUF",
  # tryceratops
  "TRY",
]
lint.ignore = [
  "E501",   # line-too-long
  "E731",   # lambda-assignment
  "S311",   # suspicious-non-cryptographic-random-usage
  "TRY300", # try-consider-else
]

[tool.ruff.format]
preview = true

[tool.pylint."MESSAGES CONTROL"]
disable = "all"
enable = "W,E,F"

[tool.deptry.per_rule_ignores]
DEP002 = ["lxml"] # lxml is used by BeautifulSoup

[tool.coverage.report]
skip_empty = true

[tool.coverage.run]
branch = true
source = ["webtoon_downloader"]

[tool.project.urls]
Homepage = 'https://github.com/Zehina/Webtoon-Downloader'
Issues = 'https://github.com/Zehina/Webtoon-Downloader/issues'
Repository = 'https://github.com/Zehina/Webtoon-Downloader.git'

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]
